gitops/manifests/argocd-access/resources.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: argocd
  namespace: istio-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - argocd.home.arpa
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - argocd.home.arpa
      tls:
        mode: SIMPLE
        credentialName: argocd-home-tls
        minProtocolVersion: TLSV1_2
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: argocd
  namespace: istio-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  hosts:
    - argocd.home.arpa
  gateways:
    - argocd
  http:
    - route:
        - destination:
            host: argo-cd-argocd-server.argocd.svc.cluster.local
            port:
              number: 80
